--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,8 @@
         "anweber.vscode-httpyac",
         "rvest.vs-code-prettier-eslint",
         "hbenl.vscode-mocha-test-adapter",
-        "hbenl.vscode-test-explorer"
+        "hbenl.vscode-test-explorer",
+        "mitchdenny.ecdc"
       ]
     }
   },
