Almost done with VirtualMachine
Signed-off-by: Jeroen van Erp <jeroen@hierynomus.com>

--- a/pulumi/components/harvester/crds/nodejs/tsconfig.json
+++ b/pulumi/components/harvester/crds/nodejs/tsconfig.json
@@ -27,6 +27,15 @@
         "k8s/v1/networkAttachmentDefinition.ts",
         "k8s/v1/networkAttachmentDefinitionList.ts",
         "k8s/v1/networkAttachmentDefinitionPatch.ts",
+        "kubevirt/index.ts",
+        "kubevirt/v1/index.ts",
+        "kubevirt/v1/virtualMachine.ts",
+        "kubevirt/v1/virtualMachineList.ts",
+        "kubevirt/v1/virtualMachinePatch.ts",
+        "kubevirt/v1alpha3/index.ts",
+        "kubevirt/v1alpha3/virtualMachine.ts",
+        "kubevirt/v1alpha3/virtualMachineList.ts",
+        "kubevirt/v1alpha3/virtualMachinePatch.ts",
         "provider.ts",
         "types/index.ts",
         "types/input.ts",
