--- a/pulumi/components/harvester/package.json
+++ b/pulumi/components/harvester/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@suse-tmm/harvester-base",
+    "name": "@suse-tmm/harvester",
     "version": "0.0.1",
     "main": "index.ts",
     "types": "index.d.ts",
@@ -17,6 +17,7 @@
         "typescript": "^5.8.3"
     },
     "dependencies": {
+        "@suse-tmm/utils": "workspace:^",
         "tmp": "^0.2.3"
     }
 }
