create most common proxy cache servers

--- a/apps/suse/private-registry/proxy/templates/job-setup.yaml
+++ b/apps/suse/private-registry/proxy/templates/job-setup.yaml
@@ -5,55 +5,71 @@ metadata:
 spec:
   template:
     spec:
+      restartPolicy: OnFailure
       containers:
-      - name: harbor-setup
-        image: opensuse/tumbleweed
-        command: ["/bin/bash", "-c"]
-        args:
-          - |
-            zypper install -y jq
-            curl -X POST -u $HARBOR_USERNAME:$HARBOR_PASSWORD \
-              -H "Content-Type: application/json" \
-              --url https://{{ .Values.harbor.url }}/api/v2.0/registries \
-              -d @- <<EOF
+        - name: harbor-setup
+          image: opensuse/tumbleweed
+          imagePullPolicy: IfNotPresent
+          command:
+            - /bin/bash
+            - -c
+          args:
+            - |
+              set -euo pipefail
+              zypper install -y jq
+
+              {{- range .Values.registries }}
+              echo "👉  Creating proxy cache for {{ .name }}…"
+
+              # 1) create the registry
+              curl -X POST \
+                -u "${HARBOR_USERNAME}:${HARBOR_PASSWORD}" \
+                -H "Content-Type: application/json" \
+                --url "https://${HARBOR_URL}/api/v2.0/registries" \
+                -d @- <<EOF
               {
+              {{- with .credential }}
+                {{- if and .access_key .access_secret }}
                 "credential": {
-                  "access_key": "$ACCESS_KEY",
-                  "access_secret": "$ACCESS_SECRET",
-                  "type": {{ .Values.registry.credential.type | quote }}
+                  "access_key": "{{ .access_key }}",
+                  "access_secret": "{{ .access_secret }}",
+                  "type": {{ .type | quote }}
                 },
-                "insecure": {{ .Values.registry.insecure }},
-                "name": {{ .Values.registry.name | quote }},
-                "type": {{ .Values.registry.type | quote }},
-                "url": {{ .Values.registry.url | quote }}
+                {{- end }}
+              {{- end }}
+                "insecure": {{ .insecure }},
+                "name": {{ .name | quote }},
+                "type": {{ .type | quote }},
+                "url": {{ .url | quote }}
               }
-            EOF
-            REG_ID=$(curl -X GET -u $HARBOR_USERNAME:$HARBOR_PASSWORD https://{{ .Values.harbor.url }}/api/v2.0/registries | jq -r '.[] | select(.name == "{{ .Values.registry.name }}") | .id')
-            curl -X POST -u $HARBOR_USERNAME:$HARBOR_PASSWORD \
-              -H "Content-Type: application/json" \
-              --url https://{{ .Values.harbor.url }}/api/v2.0/projects \
-              -d @- <<EOF
+              EOF
+
+              # 2) grab the new registry's ID
+              REG_ID=$(curl -s \
+                -u "${HARBOR_USERNAME}:${HARBOR_PASSWORD}" \
+                --url "https://${HARBOR_URL}/api/v2.0/registries" \
+                | jq -r '.[] | select(.name=="{{ .name }}") | .id')
+
+              # 3) create a project named the same as the registry, linked to that registry ID
+              echo "👉  Creating project {{ .name }}…"
+              curl -X POST \
+                -u "${HARBOR_USERNAME}:${HARBOR_PASSWORD}" \
+                -H "Content-Type: application/json" \
+                --url "https://${HARBOR_URL}/api/v2.0/projects" \
+                -d @- <<EOP
               {
-                "project_name": {{ .Values.registry.name | quote }},
+                "project_name": {{ .name | quote }},
                 "registry_id": $REG_ID,
                 "public": true
               }
-            EOF
-        env:
-        - name: HARBOR_USERNAME
-          value: {{ .Values.harbor.username }}
-        - name: HARBOR_PASSWORD
-          value: {{ .Values.harbor.password }}
-        - name: REGISTRY_NAME
-          value: {{ .Values.registry.name }}
-        - name: ACCESS_KEY
-          valueFrom:
-            secretKeyRef:
-              name: appco-harbor-proxy-cache
-              key: access_key
-        - name: ACCESS_SECRET
-          valueFrom:
-            secretKeyRef:
-              name: appco-harbor-proxy-cache
-              key: access_secret
-      restartPolicy: OnFailure
+              EOP
+
+              echo "✅  Done {{ .name }}"
+              {{- end }}
+          env:
+            - name: HARBOR_USERNAME
+              value: {{ .Values.harbor.username | quote }}
+            - name: HARBOR_PASSWORD
+              value: {{ .Values.harbor.password | quote }}
+            - name: HARBOR_URL
+              value: {{ .Values.harbor.url | quote }}
