Refactored CRDs to own component
Signed-off-by: Jeroen van Erp <jeroen@hierynomus.com>

--- a/pulumi/components/harvester-crds/crds/nodejs/tsconfig.json
+++ b/pulumi/components/harvester-crds/crds/nodejs/tsconfig.json
@@ -30,10 +30,16 @@
         "kubevirt/index.ts",
         "kubevirt/v1/index.ts",
         "kubevirt/v1/virtualMachine.ts",
+        "kubevirt/v1/virtualMachineInstance.ts",
+        "kubevirt/v1/virtualMachineInstanceList.ts",
+        "kubevirt/v1/virtualMachineInstancePatch.ts",
         "kubevirt/v1/virtualMachineList.ts",
         "kubevirt/v1/virtualMachinePatch.ts",
         "kubevirt/v1alpha3/index.ts",
         "kubevirt/v1alpha3/virtualMachine.ts",
+        "kubevirt/v1alpha3/virtualMachineInstance.ts",
+        "kubevirt/v1alpha3/virtualMachineInstanceList.ts",
+        "kubevirt/v1alpha3/virtualMachineInstancePatch.ts",
         "kubevirt/v1alpha3/virtualMachineList.ts",
         "kubevirt/v1alpha3/virtualMachinePatch.ts",
         "provider.ts",
