--- a/pulumi/components/harvester-crds/package.json
+++ b/pulumi/components/harvester-crds/package.json
@@ -1,24 +1,19 @@
 {
-    "name": "@suse-tmm/harvester",
+    "name": "@suse-tmm/harvester-crds",
     "version": "0.0.1",
     "main": "index.ts",
     "types": "index.d.ts",
     "license": "Apache-2.0",
     "peerDependencies": {
         "@pulumi/kubernetes": "^4.23.0",
-        "@pulumi/pulumi": "^3.169.0",
-        "@types/tmp": "^0.2.6"
+        "@pulumi/pulumi": "^3.169.0"
     },
     "scripts": {
+        "generate": "crd2pulumi --nodejs --force src/*.yaml",
         "build": "tsc -p ."
     },
     "devDependencies": {
         "@types/node": "^22.0.0",
         "typescript": "^5.8.3"
-    },
-    "dependencies": {
-        "@suse-tmm/harvester-crds": "workspace:^",
-        "@suse-tmm/utils": "workspace:^",
-        "tmp": "^0.2.3"
     }
 }
