--- a/pulumi/components/rancher-install/package.json
+++ b/pulumi/components/rancher-install/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@suse-tmm/harvester-crds",
+    "name": "@suse-tmm/rancher-install",
     "version": "0.0.1",
     "main": "index.ts",
     "types": "index.d.ts",
@@ -9,11 +9,15 @@
         "@pulumi/pulumi": "^3.171.0"
     },
     "scripts": {
-        "generate": "crd2pulumi --nodejs --force src/*.yaml",
         "build": "tsc -p ."
     },
     "devDependencies": {
         "@types/node": "^22.15.23",
         "typescript": "^5.8.3"
+    },
+    "dependencies": {
+        "@pulumi/command": "^1.1.0",
+        "@suse-tmm/rancher-crds": "workspace:^",
+        "@suse-tmm/utils": "workspace:^"
     }
 }
