--- a/pulumi/components/harvester/package.json
+++ b/pulumi/components/harvester/package.json
@@ -13,12 +13,17 @@
         "build": "tsc -p ."
     },
     "devDependencies": {
+        "@types/js-yaml": "^4.0.9",
         "@types/node": "^22.15.23",
+        "client-node": "link:@types/kubernetes/client-node",
         "typescript": "^5.8.3"
     },
     "dependencies": {
+        "@kubernetes/client-node": "^1.3.0",
         "@suse-tmm/harvester-crds": "workspace:^",
         "@suse-tmm/utils": "workspace:^",
+        "got": "^12.6.1",
+        "js-yaml": "^3.14.1",
         "tmp": "^0.2.3"
     }
 }
