--- a/pulumi/components/common/package.json
+++ b/pulumi/components/common/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@suse-tmm/rancher-install",
+    "name": "@suse-tmm/common",
     "version": "0.0.1",
     "main": "index.ts",
     "types": "index.d.ts",
@@ -17,7 +17,6 @@
     },
     "dependencies": {
         "@pulumi/command": "^1.1.0",
-        "@suse-tmm/common": "workspace:^",
         "@suse-tmm/rancher-crds": "workspace:^",
         "@suse-tmm/utils": "workspace:^"
     }
