--- a/pulumi/components/rancher-crds/crds/nodejs/tsconfig.json
+++ b/pulumi/components/rancher-crds/crds/nodejs/tsconfig.json
@@ -14,6 +14,9 @@
     },
     "files": [
         "cert_manager/index.ts",
+        "cert_manager/v1/certificate.ts",
+        "cert_manager/v1/certificateList.ts",
+        "cert_manager/v1/certificatePatch.ts",
         "cert_manager/v1/clusterIssuer.ts",
         "cert_manager/v1/clusterIssuerList.ts",
         "cert_manager/v1/clusterIssuerPatch.ts",
