--- a/pulumi/components/utils/package.json
+++ b/pulumi/components/utils/package.json
@@ -13,11 +13,15 @@
     },
     "devDependencies": {
         "@types/chai": "^5.2.2",
+        "@types/js-yaml": "^4.0.9",
         "@types/mocha": "^10.0.10",
         "@types/node": "^22.15.23",
         "chai": "^5.2.0",
         "mocha": "^11.5.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
+    },
+    "dependencies": {
+        "js-yaml": "^3.14.1"
     }
 }
