Moved rancher-crds to common-crds as they're cert-manager crds
Signed-off-by: Jeroen van Erp <jeroen@hierynomus.com>

--- a/pulumi/components/common/package.json
+++ b/pulumi/components/common/package.json
@@ -17,7 +17,7 @@
     },
     "dependencies": {
         "@pulumi/command": "^1.1.0",
-        "@suse-tmm/rancher-crds": "workspace:^",
+        "@suse-tmm/common-crds": "workspace:^",
         "@suse-tmm/utils": "workspace:^"
     }
 }
