--- a/pulumi/components/common-crds/package.json
+++ b/pulumi/components/common-crds/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@suse-tmm/rancher-crds",
+    "name": "@suse-tmm/common-crds",
     "version": "0.0.1",
     "main": "index.ts",
     "types": "index.d.ts",
