--- a/pulumi/components/rancher/package.json
+++ b/pulumi/components/rancher/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@suse-tmm/rancher-install",
+    "name": "@suse-tmm/rancher",
     "version": "0.0.1",
     "main": "index.ts",
     "types": "index.d.ts",
