--- a/pulumi/sample-setup/package.json
+++ b/pulumi/sample-setup/package.json
@@ -11,7 +11,7 @@
         "@pulumi/kubernetes": "^4.23.0",
         "@suse-tmm/harvester": "workspace:^",
         "@suse-tmm/kubeconfig": "workspace:^",
-        "@suse-tmm/rancher-install": "workspace:^",
+        "@suse-tmm/rancher": "workspace:^",
         "@suse-tmm/utils": "workspace:^",
         "js-yaml": "^3.14.1"
     }
