Fix missing https:// in baseUrl to make it 2.4.0 compatible
Signed-off-by: Jeroen van Erp <jeroen.vanerp@suse.com>

--- a/apps/platform/suse-observability/fleet.yaml
+++ b/apps/platform/suse-observability/fleet.yaml
@@ -2,11 +2,11 @@ defaultNamespace: suse-observability
 helm:
   chart: suse-observability
   repo: https://charts.rancher.com/server-charts/prime/suse-observability
-  version: 2.3.7 # This needs to be manualy updated
+  version: 2.4.0 # This needs to be manualy updated
   releaseName: suse-observability
   values:
     stackstate:
-      baseUrl: ${ if hasKey .ClusterAnnotations "hosted-domain" }observability.${ .ClusterName }.${ get .ClusterAnnotations "hosted-domain" }${ else}http://localhost${ end}
+      baseUrl: ${ if hasKey .ClusterAnnotations "hosted-domain" }https://observability.${ .ClusterName }.${ get .ClusterAnnotations "hosted-domain" }${ else}http://localhost${ end}
     ingress:
       ingressClassName: nginx
 
