Added management.cluster and provisioning.Cluster crds

--- a/pulumi/components/rancher-crds/crds/nodejs/tsconfig.json
+++ b/pulumi/components/rancher-crds/crds/nodejs/tsconfig.json
@@ -19,7 +19,17 @@
         "catalog/v1/clusterRepoPatch.ts",
         "catalog/v1/index.ts",
         "index.ts",
+        "management/index.ts",
+        "management/v3/cluster.ts",
+        "management/v3/clusterList.ts",
+        "management/v3/clusterPatch.ts",
+        "management/v3/index.ts",
         "provider.ts",
+        "provisioning/index.ts",
+        "provisioning/v1/cluster.ts",
+        "provisioning/v1/clusterList.ts",
+        "provisioning/v1/clusterPatch.ts",
+        "provisioning/v1/index.ts",
         "types/index.ts",
         "types/input.ts",
         "types/output.ts",
