Major update, now syncs Harvester <-> Rancher

--- a/pulumi/components/harvester-crds/crds/nodejs/tsconfig.json
+++ b/pulumi/components/harvester-crds/crds/nodejs/tsconfig.json
@@ -18,6 +18,9 @@
         "harvesterhci/v1beta1/keyPair.ts",
         "harvesterhci/v1beta1/keyPairList.ts",
         "harvesterhci/v1beta1/keyPairPatch.ts",
+        "harvesterhci/v1beta1/setting.ts",
+        "harvesterhci/v1beta1/settingList.ts",
+        "harvesterhci/v1beta1/settingPatch.ts",
         "harvesterhci/v1beta1/virtualMachineImage.ts",
         "harvesterhci/v1beta1/virtualMachineImageList.ts",
         "harvesterhci/v1beta1/virtualMachineImagePatch.ts",
