--- a/pulumi/components/utils/package.json
+++ b/pulumi/components/utils/package.json
@@ -16,12 +16,18 @@
         "@types/js-yaml": "^4.0.9",
         "@types/mocha": "^10.0.10",
         "@types/node": "^22.15.23",
+        "@types/ssh2": "^1.15.5",
+        "@types/tmp": "^0.2.6",
         "chai": "^5.2.0",
         "mocha": "^11.5.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
     },
     "dependencies": {
-        "js-yaml": "^3.14.1"
+        "@types/got": "^9.6.12",
+        "got": "^12.6.1",
+        "js-yaml": "^3.14.1",
+        "ssh2": "^1.16.0",
+        "tmp": "^0.2.3"
     }
 }
