--- a/pulumi/components/rancher-crds/crds/nodejs/tsconfig.json
+++ b/pulumi/components/rancher-crds/crds/nodejs/tsconfig.json
@@ -18,6 +18,14 @@
         "catalog/v1/clusterRepoList.ts",
         "catalog/v1/clusterRepoPatch.ts",
         "catalog/v1/index.ts",
+        "fleet/index.ts",
+        "fleet/v1alpha1/clusterGroup.ts",
+        "fleet/v1alpha1/clusterGroupList.ts",
+        "fleet/v1alpha1/clusterGroupPatch.ts",
+        "fleet/v1alpha1/gitRepo.ts",
+        "fleet/v1alpha1/gitRepoList.ts",
+        "fleet/v1alpha1/gitRepoPatch.ts",
+        "fleet/v1alpha1/index.ts",
         "index.ts",
         "management/index.ts",
         "management/v3/cluster.ts",
