--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,8 @@
         "rvest.vs-code-prettier-eslint",
         "hbenl.vscode-mocha-test-adapter",
         "hbenl.vscode-test-explorer",
-        "mitchdenny.ecdc"
+        "mitchdenny.ecdc",
+        "humao.rest-client"
       ]
     }
   },
