Upgrade SUSE Observability and set storage class

--- a/apps/platform/suse-observability/values.yaml
+++ b/apps/platform/suse-observability/values.yaml
@@ -1,5 +1,6 @@
 global:
   imageRegistry: "registry.rancher.com"
+  storageClass: "longhorn-single"
 
 ingress:
   enabled: ${if hasKey .ClusterAnnotations "hosted-domain"}true${else}false${end}
