--- a/pulumi/sample-setup/package.json
+++ b/pulumi/sample-setup/package.json
@@ -11,6 +11,7 @@
         "@pulumi/kubernetes": "^4.23.0",
         "@suse-tmm/harvester": "workspace:^",
         "@suse-tmm/rancher": "workspace:^",
+        "@suse-tmm/rancher-crds": "workspace:^",
         "@suse-tmm/utils": "workspace:^",
         "js-yaml": "^3.14.1"
     }
