Enable dashboards on SUSE Observability

--- a/apps/platform/suse-observability/values.yaml
+++ b/apps/platform/suse-observability/values.yaml
@@ -47,6 +47,7 @@ stackstate:
           CONFIG_FORCE_stackstate_featureSwitches_monitorEnableExperimentalAPIs: "true"
     server:
       config: |
+        stackstate.webUIConfig.featureFlags.dashboards: true
         stackstate.webUIConfig.defaultTimeRange: "LAST_1_HOUR"
     e2es:
       retention: 1
