--- a/apps/platform/suse-security/app/values.yaml
+++ b/apps/platform/suse-security/app/values.yaml
@@ -12,6 +12,7 @@ manager:
       ssl: true
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-prod
+      kubernetes.io/ingress.class: nginx
     host: ${ if hasKey .ClusterAnnotations "hosted-domain" }security.${ .ClusterName }.${ get .ClusterAnnotations "hosted-domain" }${ end}
     secretName: neuvector-tls
   svc:
@@ -27,7 +28,7 @@ controller:
     mastersvc:
       type: ClusterIP
   pvc:
-    enabled: true
+    enabled: false
   # ranchersso:
   #   enabled: true
   configmap:
@@ -78,5 +79,8 @@ cve:
   scanner:
     enabled: true
     replicas: 1
+scanner:
+  enabled: true
+  replicas: 1
 # rbac: true
 
