--- a/apps/base/cluster-repo-appco/templates/clusterrepo-appco.yaml
+++ b/apps/base/cluster-repo-appco/templates/clusterrepo-appco.yaml
@@ -1,7 +1,7 @@
 apiVersion: catalog.cattle.io/v1
 kind: ClusterRepo
 metadata:
-  name: {{ .Release.Name }}
+  name: application-collection
 spec:
   clientSecret:
     name: {{ .Values.secret.name }}
