--- a/demos/kcna25-observability/sock-shop/fleet.yaml
+++ b/demos/kcna25-observability/sock-shop/fleet.yaml
@@ -1,6 +1,7 @@
 defaultNamespace: sock-shop
 helm:
   chart: sock-shop
+  releaseName: sock-shop
   repo: https://helm-internal.stackstate.io
   version: 0.2.12
   valuesFiles:
