--- a/demos/kcna25-observability/opentelemetry-collector/values.yaml
+++ b/demos/kcna25-observability/opentelemetry-collector/values.yaml
@@ -82,7 +82,7 @@ config:
             scrape_interval: 10s
             static_configs:
               - targets:
-                  - ${env:MY_POD_IP}:8888
+                  - ${`${env:MY_POD_IP}:8888`}
   service:
     extensions:
       - health_check
