Ignore SUSE Observability Job

--- a/apps/platform/suse-observability/fleet.yaml
+++ b/apps/platform/suse-observability/fleet.yaml
@@ -55,3 +55,11 @@ overrideTargets:
   - clusterSelector:
       matchLabels:
         needs-observability: "true"
+diff:
+  comparePatches:
+    - apiVersion: batch/v1
+      kind: Job
+      namespace: suse-observability
+      name: suse-observability-topic-create
+      operations:
+        - {"op": "ignore"}
