--- a/demos/kcna25-observability/opentelemetry-collector/values.yaml
+++ b/demos/kcna25-observability/opentelemetry-collector/values.yaml
@@ -15,7 +15,7 @@ config:
   extensions:
     bearertokenauth:
       scheme: SUSEObservability
-      token: "${env:API_KEY}"
+      token: "${`${env:API_KEY}`}"
   exporters:
     # Exporter for traces to traffic mirror (used by the common config)
     otlp/suseobservability:
