--- a/apps/platform/suse-observability/fleet.yaml
+++ b/apps/platform/suse-observability/fleet.yaml
@@ -17,6 +17,7 @@ helm:
           secretName: tls-secret
     opentelemetry-collector:
       ingress:
+        ingressClassName: nginx
         hosts:
           - host: ${ if hasKey .ClusterAnnotations "hosted-domain" }otlp-observability.${ .ClusterName }.${ get .ClusterAnnotations "hosted-domain" }${ end}
             paths:
@@ -28,6 +29,7 @@ helm:
             secretName: otel-ecc-tls
         additionalIngresses:
           - name: otlp-http
+            ingressClassName: nginx
             annotations:
               cert-manager.io/cluster-issuer: letsencrypt-prod
               nginx.ingress.kubernetes.io/proxy-body-size: "50m"
