--- a/apps/platform/suse-security/app/values.yaml
+++ b/apps/platform/suse-security/app/values.yaml
@@ -12,7 +12,7 @@ manager:
       ssl: true
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-prod
-      kubernetes.io/ingress.class: nginx
+      kubernetes.io/ingress.class: traefik
     host: ${ if hasKey .ClusterAnnotations "hosted-domain" }security.${ .ClusterName }.${ get .ClusterAnnotations "hosted-domain" }${ end}
     secretName: neuvector-tls
   svc:
