--- a/apps/appco/cert-manager/config/fleet.yaml
+++ b/apps/appco/cert-manager/config/fleet.yaml
@@ -1,6 +1,12 @@
 helm:
   chart: ""
   releaseName: cert-manager-config
+  values:
+    wildcard-certificate:
+      enabled: ${ if hasKey .ClusterAnnotations "hosted-domain" }true${ else }false${ end }
+      domains:
+        - ${ if hasKey .ClusterAnnotations "hosted-domain" }*.${ .ClusterName }.${ get .ClusterAnnotations "hosted-domain" }${ else }*.${ .ClusterName }.cluster.local${ end }
+        - ${ if hasKey .ClusterAnnotations "hosted-domain" }${ .ClusterName }.${ get .ClusterAnnotations "hosted-domain" }${ else }${ .ClusterName }.cluster.local${ end }
   valuesFrom:
     - secretKeyRef:
         name: fleet-secrets
