--- a/apps/platform/longhorn/fleet.yaml
+++ b/apps/platform/longhorn/fleet.yaml
@@ -10,9 +10,7 @@ helm:
       host: ${ if hasKey .ClusterAnnotations "hosted-domain" }longhorn.${ .ClusterName }.${ get .ClusterAnnotations "hosted-domain" }${ end}
       ingressClassName: traefik
       tls: true
-      tlsSecret: longhorn-ingress-tls
-      annotations:
-        cert-manager.io/cluster-issuer: letsencrypt-prod
+      tlsSecret: wildcard-tls
     persistence:
       migratable: true
     longhornUI:
