--- a/apps/suse/private-registry/app/values.yaml
+++ b/apps/suse/private-registry/app/values.yaml
@@ -1,15 +1,13 @@
 expose:
   type: ${ if hasKey .ClusterAnnotations "hosted-domain" }ingress${ else}nodePort${ end}
   ingress:
-    annotations:
-      cert-manager.io/cluster-issuer: letsencrypt-prod
     className: traefik
     hosts:
       core: ${ if hasKey .ClusterAnnotations "hosted-domain" }registry.${ .ClusterName }.${ get .ClusterAnnotations "hosted-domain" }${ end}
   tls:
     certSource: secret
     secret:
-      secretName: harbor-tls
+      secretName: wildcard-tls
 externalURL: ${ if hasKey .ClusterAnnotations "hosted-domain" }https://registry.${ .ClusterName }.${ get .ClusterAnnotations "hosted-domain" }${ end}
 global:
   imagePullSecrets: ["suse-registry"]
