--- a/apps/platform/suse-observability/fleet.yaml
+++ b/apps/platform/suse-observability/fleet.yaml
@@ -2,7 +2,7 @@ defaultNamespace: suse-observability
 helm:
   chart: suse-observability
   repo: https://charts.rancher.com/server-charts/prime/suse-observability
-  version: 2.6.1 # This needs to be manualy updated
+  version: 2.7.0
   releaseName: suse-observability
   values:
     stackstate:
