Add traefik annotation to observability otel collector for grpc

--- a/apps/platform/suse-observability/values.yaml
+++ b/apps/platform/suse-observability/values.yaml
@@ -7,9 +7,11 @@ ingress:
 opentelemetry-collector:
   ingress:
     enabled: ${ if hasKey .ClusterAnnotations "hosted-domain" }true${else}false${end}
+  service:
+    annotations:
+      traefik.ingress.kubernetes.io/service.serversscheme: h2c
 opentelemetry:
   enabled: true
-
 
 stackstate:
   authentication:
