retry with full listeners
Signed-off-by: Jeroen van Erp <jeroen@hierynomus.com>

--- a/apps/base/traefik/fleet.yaml
+++ b/apps/base/traefik/fleet.yaml
@@ -13,9 +13,19 @@ helm:
       listeners:
         web:
           port: 8000
-          hostname: ${ if hasKey .ClusterAnnotations "hosted-domain" }*.${ .ClusterName }.${ get .ClusterAnnotations "hosted-domain" }${ else }""${ end }
+          hostname: ${ if hasKey .ClusterAnnotations "hosted-domain" }"*.${ .ClusterName }.${ get .ClusterAnnotations "hosted-domain" }"${ else }""${ end }
           namespacePolicy:
             from: All
+        websecure:
+          port: 8443
+          hostname: ${ if hasKey .ClusterAnnotations "hosted-domain" }"*.${ .ClusterName }.${ get .ClusterAnnotations "hosted-domain" }"${ else }""${ end }
+          namespacePolicy:
+            from: All
+          protocol: HTTPS
+          certificateRefs:
+            - name: wildcard-tls
+              kind: Secret
+
 labels:
   app: traefik
 overrideTargets:
